@@ -1,6 +1,5 @@
 Hadoop Change Log
 
-
 Branch 0.14 (unreleased changes)
 
   1. HADOOP-1197.  In Configuration, deprecate getObject() and add
@@ -411,6 +410,10 @@ Branch 0.14 (unreleased changes)
      (Devaraj Das via omalley)
 
 138. HADOOP-1628.  Add block CRC protocol unit tests. (Raghu Angadi via omalley)
+
+139. HADOOP-1653. FSDirectory code-cleanups. FSDirectory.INode becomes a static
+     class.  (Christophe Taton via dhruba)
+
 
 Release 0.13.0 - 2007-06-08
 
